# woden2

./: README.md  pyproject.toml
woden2/: main.py  utils.py
woden2/gscholar/: gscholar.py  publication.py  scholar.py
woden2/wos/: wos.py
