[tool.poetry]
name = "woden2"
version = "0.1.0"
description = "Set of web scrapers for scholarly literature."
authors = ["awakenedhaki <rodrigo.vallejosch@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
bs4 = "^0.0.1"
requests = "2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
